# fastapi-async-master-1.0

./: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
docs/: 使用文档.md  异步使用指南.md  项目介绍文档.md
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: CustomNodes.tsx  QueueStats.tsx  TaskFlowGraph.tsx  WorkerStats.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/: api.ts  i18n.tsx  task-types-api.ts  tasks-api.ts  types.ts
frontend/src/pages/: Dashboard.tsx  TaskTypeManager.tsx  TasksCleanup.tsx  TasksHistory.tsx
src/api/: Dockerfile  config.py  main.py  schemas.py  services.py  task_type_registry.py
src/api/routers/: health.py  task_types.py  tasks.py  workers.py
src/worker/: Dockerfile  api_executor.py  auth_handler.py  circuit_breaker.py  config.py  consumer.py  main.py  rate_limiter.py  response_parser.py  start_worker.sh  tasks.py  template_renderer.py
tests/: conftest.py
tests/integration/: test_api_executor_integration.py  test_submit_flow.py  test_task_type_crud.py
tests/unit/: test_api_executor.py  test_auth_handler.py  test_response_parser.py  test_task_type_registry.py  test_template_renderer.py
